--- a/UI/mainwidget.ui
+++ b/UI/mainwidget.ui
@@ -16,17 +16,20 @@
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>140</y>
-     <width>791</width>
-     <height>511</height>
+     <x>60</x>
+     <y>50</y>
+     <width>891</width>
+     <height>601</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_4">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <layout class="QHBoxLayout" name="horizontalLayout_3"/>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_5">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
@@ -82,8 +85,17 @@
             <string>密码</string>
            </property>
           </column>
+          <column>
+           <property name="text">
+            <string>连接状态</string>
+           </property>
+          </column>
          </widget>
         </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_7">
           <item>
@@ -122,7 +134,7 @@
                </size>
               </property>
               <property name="text">
-               <string>批量导入命令</string>
+               <string>批量导入</string>
               </property>
              </widget>
             </item>
