--- a/UI/mainwidget.ui
+++ b/UI/mainwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1440</width>
-    <height>872</height>
+    <width>1920</width>
+    <height>1052</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,18 +16,18 @@
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>50</y>
-     <width>891</width>
-     <height>601</height>
+     <x>270</x>
+     <y>70</y>
+     <width>1271</width>
+     <height>741</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_4">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_3"/>
-    </item>
-    <item>
      <layout class="QHBoxLayout" name="horizontalLayout_5">
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_3"/>
+      </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <item>
@@ -62,104 +62,84 @@
           </item>
          </layout>
         </item>
-        <item>
-         <widget class="QTableWidget" name="tw_host_info">
-          <property name="minimumSize">
-           <size>
-            <width>256</width>
-            <height>192</height>
-           </size>
-          </property>
-          <column>
-           <property name="text">
-            <string>主机ip</string>
-           </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>用户名</string>
-           </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>密码</string>
-           </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>连接状态</string>
-           </property>
-          </column>
-         </widget>
-        </item>
        </layout>
+      </item>
+      <item>
+       <widget class="QTableWidget" name="tw_host_info">
+        <property name="minimumSize">
+         <size>
+          <width>256</width>
+          <height>192</height>
+         </size>
+        </property>
+        <column>
+         <property name="text">
+          <string>主机ip</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>用户名</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>密码</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>连接状态</string>
+         </property>
+        </column>
+       </widget>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_7">
+         <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout">
-            <item alignment="Qt::AlignHCenter">
-             <widget class="QLabel" name="label_7">
-              <property name="minimumSize">
-               <size>
-                <width>83</width>
-                <height>149</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>83</width>
-                <height>149</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;命令&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-              </property>
-             </widget>
-            </item>
-            <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-             <widget class="QPushButton" name="btn_batch_cmd_import">
-              <property name="minimumSize">
-               <size>
-                <width>83</width>
-                <height>32</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>83</width>
-                <height>32</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>批量导入</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-           <widget class="QTextEdit" name="te_cmd_input">
+           <widget class="QLabel" name="label_7">
             <property name="minimumSize">
              <size>
-              <width>256</width>
-              <height>192</height>
+              <width>83</width>
+              <height>149</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>256</width>
-              <height>192</height>
+              <width>83</width>
+              <height>149</height>
              </size>
             </property>
-            <property name="styleSheet">
-             <string notr="true">border:2px groove gray;border-radius:10px;padding:2px 4px</string>
+            <property name="text">
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;命令&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btn_batch_cmd_import">
+            <property name="minimumSize">
+             <size>
+              <width>83</width>
+              <height>32</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>83</width>
+              <height>32</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>批量导入</string>
             </property>
            </widget>
           </item>
          </layout>
+        </item>
+        <item>
+         <widget class="QTextEdit" name="te_cmd_input"/>
         </item>
        </layout>
       </item>
