--- a/UI/mainwidget.ui
+++ b/UI/mainwidget.ui
@@ -6,296 +6,315 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1291</width>
-    <height>872</height>
+    <width>1478</width>
+    <height>758</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1">
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="QLabel" name="label_7">
-         <property name="minimumSize">
-          <size>
-           <width>83</width>
-           <height>149</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>83</width>
-           <height>149</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;命令&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="btn_batch_cmd_import">
-         <property name="minimumSize">
-          <size>
-           <width>83</width>
-           <height>32</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>83</width>
-           <height>32</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>批量导入</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <widget class="QTextEdit" name="te_cmd_input">
-       <property name="minimumSize">
-        <size>
-         <width>463</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>463</width>
-         <height>361</height>
-        </size>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">border:2px groove gray;border-radius:10px;padding:2px 4px</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label">
-     <property name="minimumSize">
-      <size>
-       <width>98</width>
-       <height>29</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>98</width>
-       <height>29</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;当前运行结果&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <widget class="QPushButton" name="btn_batch_host_import">
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
+     <widget class="QWidget" name="tab">
+      <attribute name="title">
+       <string>Tab 1</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout">
+           <item>
+            <widget class="QPushButton" name="btn_batch_host_import">
+             <property name="minimumSize">
+              <size>
+               <width>110</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>110</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>批量导入主机</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="btn_add_host">
+             <property name="minimumSize">
+              <size>
+               <width>110</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>110</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>添加主机</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="btn_del_host">
+             <property name="minimumSize">
+              <size>
+               <width>110</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>110</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>删除主机</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="btn_undo_host">
+             <property name="minimumSize">
+              <size>
+               <width>110</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>110</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>撤销</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QTableWidget" name="tw_host_info">
+           <property name="minimumSize">
+            <size>
+             <width>561</width>
+             <height>192</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>561</width>
+             <height>363</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="0" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_2">
+           <item>
+            <widget class="QLabel" name="label_7">
+             <property name="minimumSize">
+              <size>
+               <width>83</width>
+               <height>149</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>83</width>
+               <height>149</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;命令&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="btn_batch_cmd_import">
+             <property name="minimumSize">
+              <size>
+               <width>83</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>83</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>批量导入</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QTextEdit" name="te_cmd_input">
+           <property name="minimumSize">
+            <size>
+             <width>463</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>463</width>
+             <height>361</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border:2px groove gray;border-radius:10px;padding:2px 4px</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="QLabel" name="label">
          <property name="minimumSize">
           <size>
-           <width>110</width>
-           <height>0</height>
+           <width>98</width>
+           <height>29</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>110</width>
-           <height>32</height>
+           <width>98</width>
+           <height>29</height>
           </size>
          </property>
          <property name="text">
-          <string>批量导入主机</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:700;&quot;&gt;当前运行结果&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QPushButton" name="btn_add_host">
+       <item row="2" column="0" colspan="2">
+        <widget class="QTextEdit" name="te_cmd_output">
          <property name="minimumSize">
           <size>
-           <width>110</width>
+           <width>1267</width>
            <height>0</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>110</width>
-           <height>32</height>
+           <width>1267</width>
+           <height>283</height>
           </size>
          </property>
-         <property name="text">
-          <string>添加主机</string>
+         <property name="styleSheet">
+          <string notr="true">border:2px groove gray;border-radius:10px;padding:2px 4px</string>
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QPushButton" name="btn_del_host">
-         <property name="minimumSize">
-          <size>
-           <width>110</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>110</width>
-           <height>32</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>删除主机</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="btn_undo_host">
-         <property name="minimumSize">
-          <size>
-           <width>110</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>110</width>
-           <height>32</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>撤销</string>
-         </property>
-        </widget>
+       <item row="3" column="0" colspan="2">
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <widget class="QPushButton" name="btn_conn_test">
+           <property name="minimumSize">
+            <size>
+             <width>137</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>137</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>连接性测试</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_inspection">
+           <property name="minimumSize">
+            <size>
+             <width>137</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>137</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>巡检</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_export">
+           <property name="minimumSize">
+            <size>
+             <width>136</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>136</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>导出报告</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_about">
+           <property name="minimumSize">
+            <size>
+             <width>137</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>137</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>关于</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
-     </item>
-     <item>
-      <widget class="QTableWidget" name="tw_host_info">
-       <property name="minimumSize">
-        <size>
-         <width>561</width>
-         <height>192</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>561</width>
-         <height>363</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="2" column="0" colspan="2" alignment="Qt::AlignHCenter">
-    <widget class="QTextEdit" name="te_cmd_output">
-     <property name="minimumSize">
-      <size>
-       <width>1267</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>1267</width>
-       <height>283</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border:2px groove gray;border-radius:10px;padding:2px 4px</string>
-     </property>
+     </widget>
+     <widget class="QWidget" name="tab_2">
+      <attribute name="title">
+       <string>Tab 2</string>
+      </attribute>
+     </widget>
     </widget>
-   </item>
-   <item row="4" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
-     <item>
-      <widget class="QPushButton" name="btn_export">
-       <property name="minimumSize">
-        <size>
-         <width>136</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>136</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>导出报告</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_about">
-       <property name="minimumSize">
-        <size>
-         <width>137</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>137</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>关于</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_conn_test">
-       <property name="minimumSize">
-        <size>
-         <width>137</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>137</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>连接性测试</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_inspection">
-       <property name="minimumSize">
-        <size>
-         <width>137</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>137</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>巡检</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </item>
   </layout>
  </widget>
